Gave greater contrast to letters and background for readability.Changed background display to prevent tiling effect.

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,7 +1,10 @@
 body {
+  min-width: 480px;
   background-color: #bdc3c7;
   background-image: url('../images/pogs_hd.jpg');
-  background-size: 100%;
+  /*background-size: 100%;*/
+  background-size: cover;
+  background-position: center;
 }
 
 header{
@@ -55,6 +58,9 @@ header nav li{
 h1, h2, h3 {
 	color: white;
   letter-spacing: 3px;
+  text-align: center;
+  text-shadow: 3px 3px 3px black,
+              -3px -3px 3px black;
 }
 
 a {
@@ -98,7 +104,7 @@ a {
 
 .pog-profile {
   background-image: url('../images/wooden_table.jpg');
-	border: 3px solid white;
+	border: 8px solid white;
   margin: 30px auto;
   background-color: #1abc9c;
 	border-radius: 20px;
@@ -107,15 +113,17 @@ a {
 }
 
 .page-top {
+  margin-top: 40px;
 	text-align: center;
 	font-size: 150%;
 	letter-spacing: 3px;
-  text-shadow: 3px 3px 3px black;
+  text-shadow: 3px 3px 3px black,
+              -3px -3px 3px black;
 }
 
 .pog-solo {
   background-image: url('../images/wooden_table.jpg');
-  border: 3px solid white;
+  border: 8px solid white;
   margin: 30px auto;
   background-color: #1abc9c;
   border-radius: 20px;
@@ -123,12 +131,12 @@ a {
   padding: 30px;
   text-align: center;
   color: white;
-  text-shadow: 3px 3px 3px black;
+  text-shadow: 3px 3px 3px black,
+              -3px -3px 3px black;
 }
 
 .pog-solo h1 {
   color: #8DD5C4;
-  text-shadow: 3px 3px 3px black;
 }
 
 .solo-text {
